Fixed sizing of overlap figures. Also wrote out some legend figures.

--- a/figures/figure_4.ipynb
+++ b/figures/figure_4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "unavailable-termination",
+   "id": "political-cutting",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "hazardous-amount",
+   "id": "constitutional-butterfly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "aging-church",
+   "execution_count": 3,
+   "id": "peripheral-public",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "arranged-coupon",
+   "id": "vocal-glass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cloudy-warner",
+   "id": "guided-context",
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "worthy-citation",
+   "execution_count": 6,
+   "id": "alive-repair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "empty-preliminary",
+   "execution_count": 7,
+   "id": "aboriginal-surprise",
    "metadata": {},
    "outputs": [
     {
@@ -319,8 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "substantial-mounting",
+   "execution_count": 8,
+   "id": "noble-wellington",
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "stuffed-reduction",
+   "execution_count": 10,
+   "id": "executive-malaysia",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_grid(net_legend)\n",
+    "plot_grid(net_legend) %>%\n",
+    "    ggsave(filename = paste0(\"/mnt/d/thesis_figures/cesc_net_legend.png\"), dpi = dpi, height = 2, width = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "muslim-church",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "willing-citizenship",
+   "id": "photographic-motion",
    "metadata": {},
    "outputs": [],
    "source": []
