--- a/figures/figure_5.ipynb
+++ b/figures/figure_5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "clinical-editing",
+   "id": "worthy-tongue",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "studied-bowling",
+   "id": "banned-armstrong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "accredited-freight",
+   "execution_count": 3,
+   "id": "known-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "particular-pencil",
+   "execution_count": 4,
+   "id": "incorporated-gathering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "desirable-decrease",
+   "execution_count": 5,
+   "id": "funny-spirit",
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "alpha-citation",
+   "execution_count": 6,
+   "id": "peaceful-radius",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "rough-asbestos",
+   "execution_count": 7,
+   "id": "fossil-combine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "seven-quarter",
+   "execution_count": 8,
+   "id": "adaptive-webmaster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "selected-relaxation",
+   "execution_count": 19,
+   "id": "macro-shopping",
    "metadata": {},
    "outputs": [
     {
@@ -354,8 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "alive-header",
+   "execution_count": 10,
+   "id": "modular-sandwich",
    "metadata": {},
    "outputs": [
     {
@@ -417,8 +417,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "realistic-knowing",
+   "execution_count": 11,
+   "id": "logical-assurance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_grid(mat_sig_bplot_legend) %>%\n",
+    "#     ggsave(filename = paste0(\"/mnt/d/thesis_figures/sig_de_legend.png\"), dpi = dpi, height = 2, width = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "difficult-monitoring",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# thesis_intra_grid <- plot_grid(\n",
+    "#     plot_grid(\n",
+    "#         CESC_intra + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "#         UCEC_intra + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "#         UCS_intra + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "#         nrow = 1,\n",
+    "#         # Proportional sizes\n",
+    "#         rel_widths = c(n_cesc_intra, n_ucec_intra, n_ucs_intra),\n",
+    "#         labels = c(\"CESC\", \"UCEC\", \"UCS\"),\n",
+    "#         vjust = 5,\n",
+    "# #         hjust = 0,\n",
+    "#         label_size = text_size\n",
+    "#     ),\n",
+    "#     label_size = label_text_size,\n",
+    "#     label_fontfamily = family\n",
+    "# )\n",
+    "\n",
+    "# thesis_inter_grid <- plot_grid(\n",
+    "#     plot_grid(\n",
+    "#         demg_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "#         figo_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "#         survival_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "#         nrow = 1,\n",
+    "#         # Proportional sizes\n",
+    "# #         rel_widths = c(n_demg, n_figo, n_surv),\n",
+    "#         labels = c(\"DEMG\", \"Stage sig. DEMGs\", \"Survival sig. DEMGs\"),\n",
+    "#         vjust = 5,\n",
+    "# #         hjust = 0,\n",
+    "#         label_size = text_size,\n",
+    "#         label_fontfamily = family\n",
+    "#     ),\n",
+    "#     label_size = label_text_size,\n",
+    "#     label_fontfamily = family\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fatty-estate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# thesis_intra_grid %>%\n",
+    "#     ggsave(filename = paste0(\"/mnt/d/thesis_figures/intra_grid.png\"), dpi = dpi, height = 3, width = 6)\n",
+    "# thesis_inter_grid %>%\n",
+    "#     ggsave(filename = paste0(\"/mnt/d/thesis_figures/inter_grid.png\"), dpi = dpi, height = 3, width = 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "opening-minneapolis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,8 +500,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "negative-today",
+   "execution_count": 15,
+   "id": "alike-migration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aging-library",
+   "id": "broad-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": []
