--- a/figures/figure_S1.ipynb
+++ b/figures/figure_S1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "violent-description",
+   "id": "green-capital",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "deadly-tuesday",
+   "id": "cordless-speaker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "veterinary-norway",
+   "id": "effective-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "oriental-measurement",
+   "id": "transsexual-anger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "flying-eating",
+   "id": "nominated-fighter",
    "metadata": {},
    "outputs": [
     {
@@ -126,17 +126,17 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "original-bibliography",
+   "id": "addressed-reverse",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS1.png\"), plot = figS1, dpi = dpi, height = ht, width = wd)"
+    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS1_old.png\"), plot = figS1, dpi = dpi, height = ht, width = wd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "saving-ireland",
+   "id": "auburn-little",
    "metadata": {},
    "outputs": [],
    "source": []
