Redid figures in different format. Renamed figures to match manuscript.

--- a/figures/figure_1.ipynb
+++ b/figures/figure_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "abandoned-arbitration",
+   "id": "simplified-woman",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "upset-plant",
+   "id": "amber-cancer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "wicked-flour",
+   "id": "working-channel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,14 @@
     "family <- \"ArialMT\"\n",
     "dpi <- 320\n",
     "fig1_ht <- 4.5\n",
-    "fig1_wd <- 6"
+    "fig1_wd <- 6\n",
+    "output_extension <- \".tiff\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "environmental-customs",
+   "execution_count": 4,
+   "id": "continued-arrangement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "sufficient-firmware",
+   "execution_count": 5,
+   "id": "intellectual-grove",
    "metadata": {},
    "outputs": [
     {
@@ -244,8 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "expanded-restoration",
+   "execution_count": 6,
+   "id": "julian-costs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "continental-motion",
+   "execution_count": 7,
+   "id": "small-microwave",
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "approximate-satisfaction",
+   "execution_count": 8,
+   "id": "formed-indonesia",
    "metadata": {},
    "outputs": [
     {
@@ -426,8 +427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "abstract-chess",
+   "execution_count": 9,
+   "id": "desirable-orchestra",
    "metadata": {},
    "outputs": [
     {
@@ -458,8 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "better-screening",
+   "execution_count": 10,
+   "id": "hazardous-inventory",
    "metadata": {},
    "outputs": [
     {
@@ -509,8 +510,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "distinct-rental",
+   "execution_count": 11,
+   "id": "infectious-simpson",
    "metadata": {},
    "outputs": [
     {
@@ -565,19 +566,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "velvet-apparel",
+   "execution_count": 12,
+   "id": "cultural-butler",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ggsave(fig1, filename = paste0(dirs$figures_dir, \"/paneled/figure1.png\"), dpi = dpi, height = fig1_ht, width = fig1_wd)\n",
-    "ggsave(fig1, filename = paste0(dirs$figures_dir, \"/paneled/figure1.png\"), dpi = dpi, height = 8, width = 6.5)"
+    "# ggsave(fig1, filename = paste0(dirs$figures_dir, \"/paneled/figure1.png\"), dpi = dpi, height = 8, width = 6.5)\n",
+    "ggsave(fig1, filename = paste0(dirs$figures_dir, \"/paneled/figure1\", output_extension), dpi = dpi, height = 8, width = 6.5, units = \"in\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "early-revolution",
+   "id": "tropical-poison",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -585,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aquatic-causing",
+   "id": "following-relay",
    "metadata": {},
    "outputs": [],
    "source": []
