all data prep notebook

--- a/analysis/clustering.ipynb
+++ b/analysis/clustering.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "from pathlib import Path\n",
     "from IPython import get_ipython\n",
-    "import os\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -21,21 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify paths to data directory and output directory\n",
-    "\n",
-    "# 1. Path relative to this notebook file (../data):\n",
+    "# Specify paths to data directory and output directory (../data and ../output relative to notebook)\n",
     "DATA_DIR = Path(get_ipython().getoutput('pwd')[0]).parent / 'data'\n",
-    "# 2. For .py file:\n",
-    "# DATA_DIR = Path(__file__).resolve().parent / \"data\"\n",
-    "# 3. For specific directory you have somewhere:\n",
-    "# DATA_DIR = 'C:/Users/.../data'\n",
-    "\n",
-    "# 1. Path relative to this notebook file (../output):\n",
-    "OUTPUT_DIR = DATA_DIR.parent / 'output'\n",
-    "# 2. For .py file:\n",
-    "# OUTPUT_DIR = Path(__file__).resolve().parent / \"output\"\n",
-    "# 3. For specific directory you have somewhere:\n",
-    "# OUTPUT_DIR = 'C:/Users/.../output'"
+    "OUTPUT_DIR = DATA_DIR.parent / 'output'"
    ]
   },
   {
