prepare sample conditions (coldata) in prep notebook

--- a/data_prep/prep.ipynb
+++ b/data_prep/prep.ipynb
@@ -73,14 +73,16 @@
    "source": [
     "# Get counts and sample conditions\n",
     "\n",
-    "all_counts_dir = DATA_DIR / \"all\"\n",
-    "all_counts_dir.mkdir(parents=True, exist_ok=True)\n",
+    "counts_dir = DATA_DIR / \"all\"\n",
+    "counts_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "probe_maps_path = METADATA_DIR / \"probe_maps\"\n",
     "\n",
     "preprocessing_script = str(DATA_PREP_DIR / \"rma_counts.r\")\n",
-    "subprocess.run([\"Rscript\", preprocessing_script, str(CELFILE_DIR), str(all_counts_dir)])\n",
-    "prep.prep_geo_counts(all_counts_dir, probe_maps_path, METADATA_DIR)"
+    "cmd = [\"Rscript\", preprocessing_script, str(CELFILE_DIR), str(counts_dir)]\n",
+    "subprocess.run(cmd)\n",
+    "\n",
+    "prep.prep_geo_counts(counts_dir, probe_maps_path, METADATA_DIR)"
    ]
   },
   {
@@ -91,23 +93,70 @@
    "source": [
     "# Unify counts\n",
     "\n",
-    "counts_paths = all_counts_dir.glob(\"*.tsv\")\n",
-    "unified_counts_path = all_counts_dir / \"all_phases_all_genes_counts.tsv\"\n",
+    "counts_paths = counts_dir.glob(\"*.tsv\")\n",
+    "unified_counts_path = counts_dir / \"all_phases_all_genes_counts.tsv\"\n",
     "\n",
     "dataframes = [pd.read_csv(filepath, index_col=0, delimiter='\\t') for filepath in counts_paths]\n",
-    "merged_df = pd.concat(dataframes, axis=1)\n",
+    "merged_counts_df = pd.concat(dataframes, axis=1)\n",
     "\n",
     "# Check if there are any missing values in the merged dataframe\n",
-    "if merged_df.isnull().any().any():\n",
+    "if merged_counts_df.isnull().any().any():\n",
     "    print('There are missing values in the merged dataframe.')\n",
-    "else:\n",
-    "    print('There are no missing values in the merged dataframe.')\n",
     "\n",
     "# save merged dataframe to tsv\n",
-    "merged_df.to_csv(unified_counts_path, sep='\\t')\n",
+    "merged_counts_df.to_csv(unified_counts_path, sep='\\t')\n",
     "\n",
     "# delete individual counts files\n",
     "for filepath in counts_paths:\n",
+    "    filepath.unlink()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unify coldata and add column for batch number\n",
+    "\n",
+    "coldata_paths = counts_dir.glob(\"*_coldata.tsv\")\n",
+    "unified_coldata_path = counts_dir / \"all_phases_all_genes_coldata.tsv\"\n",
+    "\n",
+    "\"\"\" Batches:\n",
+    "    1. GSE4888 (reference batch)\n",
+    "    2. GSE6364\n",
+    "    3. GSE51981\n",
+    "    4. GSE29981\n",
+    "\"\"\"\n",
+    "\n",
+    "coldata_paths_by_batch = {}\n",
+    "\n",
+    "for path in coldata_paths:\n",
+    "    if \"gse4888\" in str(path).lower():\n",
+    "        coldata_paths_by_batch[1] = path\n",
+    "    elif \"gse6364\" in str(path).lower():\n",
+    "        coldata_paths_by_batch[2] = path\n",
+    "    elif \"gse51981\" in str(path).lower():\n",
+    "        coldata_paths_by_batch[3] = path\n",
+    "    elif \"gse29981\" in str(path).lower():\n",
+    "        coldata_paths_by_batch[4] = path\n",
+    "\n",
+    "batch_dfs = {\n",
+    "    batch: pd.read_csv(path, index_col=0, delimiter='\\t')\n",
+    "    for batch, path in coldata_paths_by_batch.items()\n",
+    "}\n",
+    "\n",
+    "merged_coldata_df = pd.concat([batch_dfs[batch] for batch in sorted(batch_dfs.keys())], axis=0)\n",
+    "\n",
+    "# Check if there are any missing values in the merged dataframe\n",
+    "if merged_coldata_df.isnull().any().any():\n",
+    "    print('There are missing values in the merged dataframe.')\n",
+    "\n",
+    "# save merged dataframe to tsv\n",
+    "merged_coldata_df.to_csv(counts_dir / \"all_phases_all_genes_coldata.tsv\", sep='\\t')\n",
+    "\n",
+    "# delete individual coldata files\n",
+    "for filepath in coldata_paths:\n",
     "    filepath.unlink()"
    ]
   },
@@ -124,7 +173,8 @@
     "\n",
     "bc_script = str(DATA_PREP_DIR / \"batch_correction.r\")\n",
     "\n",
-    "subprocess.run([\"Rscript\", bc_script, str(unified_counts_path), all_counts_dir])"
+    "cmd = [\"Rscript\", bc_script, str(unified_counts_path), str(unified_coldata_path), str(counts_dir)]\n",
+    "subprocess.run(cmd)"
    ]
   },
   {
@@ -186,6 +236,23 @@
     "        filtered_counts_df = all_phase_counts_df[sample_names]\n",
     "        counts_fp = str(all_phase_counts_fp).replace(\"all_phases\", phase)\n",
     "        filtered_counts_df.to_csv(counts_fp, sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Set aside 45 samples for validation (24 healthy, 21 endometriosis) and separate fit/test sets.\n",
+    "\n",
+    "The test set contains the 45 validation samples, and the fit set contains all other samples.\n",
+    "\"\"\"\n",
+    "\n",
+    "n_healthy = 24\n",
+    "n_endometriosis = 21\n",
+    "\n"
    ]
   }
  ],
