update analysis scripts and data prep notebook

--- a/data_prep/prep.ipynb
+++ b/data_prep/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "8194"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,10 @@
     "    counts_df = pd.read_csv(counts_path, sep='\\t')\n",
     "    for phase in phases + [\"all_phases\"]:\n",
     "        # Filter counts columns using the phase column of coldata\n",
-    "        phase_samples = coldata_df[coldata_df['phase'] == phase]['sample_name'].values\n",
+    "        if phase == \"all_phases\":\n",
+    "            phase_samples = coldata_df['sample_name'].values\n",
+    "        else:\n",
+    "            phase_samples = coldata_df[coldata_df['phase'] == phase]['sample_name'].values\n",
     "        \n",
     "        for sample_type in samples:\n",
     "            # Filter counts and coldata for fit/test samples\n",
