Add documentation to preprocessing module

--- a/data_prep/prep.ipynb
+++ b/data_prep/prep.ipynb
@@ -9,9 +9,11 @@
     "from pathlib import Path\n",
     "import subprocess\n",
     "import json\n",
-    "import util as prep\n",
+    "\n",
     "from IPython import get_ipython\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import data_preprocessing as prep"
    ]
   },
   {
