fix dgea.R and add to README

--- a/data_prep/prep.ipynb
+++ b/data_prep/prep.ipynb
@@ -27,6 +27,7 @@
     "DATA_PREP_DIR = Path(get_ipython().getoutput(\"pwd\")[0])\n",
     "BASE_DIR = DATA_PREP_DIR.parent\n",
     "METADATA_DIR = DATA_PREP_DIR / \"metadata\"\n",
+    "ANALYSIS_DIR = BASE_DIR / \"analysis\"\n",
     "DATA_URLS_PATH = METADATA_DIR / \"geo_data_urls.json\"\n",
     "DATA_DIR = BASE_DIR / \"data\"\n",
     "CELFILE_DIR = DATA_DIR / \"cel_files\""
@@ -409,10 +410,10 @@
    "outputs": [],
    "source": [
     "# Create filtered counts for all matrisome and core matrisome genes\n",
-    "with open(METADATA_DIR / \"core_matrisome_genes.json\", 'r') as json_file:\n",
+    "with open(ANALYSIS_DIR / \"core_matrisome_genes.json\", 'r') as json_file:\n",
     "    matrisome_core_genes = json.load(json_file)['symbols']\n",
     "\n",
-    "with open(METADATA_DIR / \"all_matrisome_genes.json\", 'r') as json_file:\n",
+    "with open(ANALYSIS_DIR / \"all_matrisome_genes.json\", 'r') as json_file:\n",
     "    matrisome_all_genes = json.load(json_file)['symbols']\n",
     "\n",
     "counts_df = pd.read_csv(unified_counts_path, sep='\\t')\n",
