Update clustering notebook and add cluster map

--- a/analysis/clustering.ipynb
+++ b/analysis/clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,19 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in dataframes\n",
     "\n",
-    "data = pd.read_csv(DATA_DIR / 'all'/ 'all_phases_all_matrisome_counts.tsv', sep='\\t', index_col=0)\n",
+    "matrisome_counts = pd.read_csv(DATA_DIR / 'all'/ 'all_phases_all_matrisome_counts.tsv', sep='\\t', index_col=0)\n",
     "labels = pd.read_csv(DATA_DIR / 'all'/ 'all_phases_coldata.tsv', sep='\\t', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
    "source": [
     "# Scale data and compute clustermap with hierarchical clustering\n",
     "\n",
-    "data_scaled = StandardScaler().fit_transform(data.transpose())\n",
+    "matrisome_counts_scaled = StandardScaler().fit_transform(matrisome_counts.transpose())\n",
     "\n",
     "condition_to_color = {\n",
     "    'healthy': 'green',\n",
@@ -76,7 +76,7 @@
     "row_colors = labels['condition'].map(condition_to_color).to_numpy()\n",
     "\n",
     "g = sns.clustermap(\n",
-    "    data_scaled,\n",
+    "    matrisome_counts_scaled,\n",
     "    row_colors=row_colors,  # Colored sidebar\n",
     "    method='complete',      # Linkage\n",
     "    cmap='vlag',            # Color palette\n",
@@ -85,10 +85,11 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "# Save figure to output directory\n",
     "# Create output directory if it does not exist\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "output_file_path = OUTPUT_DIR / 'clustermap.png'\n",
+    "\n",
+    "# Save figure to output directory\n",
+    "output_file_path = OUTPUT_DIR / 'clustermap_all_samples_matrisome.png'\n",
     "g.savefig(output_file_path, dpi=500)"
    ]
   },
