Add enrichment analysis addressing redundant GO terms

--- a/data_prep/prep.ipynb
+++ b/data_prep/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,22 @@
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "Data prep directory: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep\n",
+      "Data prep directory: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep\n",
       "Directory.\n",
       "--------------------------------------------------------------------------------\n",
-      "Base directory: /media/data/lab/gene/endometriosis-microarray-analysis\n",
+      "Base directory: /media/data/lab/gene/characterizing-endometriosis-transcriptome\n",
       "Directory.\n",
       "--------------------------------------------------------------------------------\n",
-      "Data URLs: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/geo_data_urls.json\n",
+      "Data URLs: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/metadata/geo_data_urls.json\n",
       "File.\n",
       "--------------------------------------------------------------------------------\n",
-      "Metadata directory: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/metadata\n",
+      "Metadata directory: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/metadata\n",
       "Directory.\n",
       "--------------------------------------------------------------------------------\n",
-      "Data directory: /media/data/lab/gene/endometriosis-microarray-analysis/data\n",
+      "Data directory: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data\n",
       "Directory.\n",
       "--------------------------------------------------------------------------------\n",
-      "CEL file directory: /media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files\n",
+      "CEL file directory: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files\n",
       "Directory.\n"
      ]
     }
@@ -93,20 +93,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading file from: https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE4888&format=file\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Untarring and unzipping file at: /media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE4888.tar\n",
+      "Downloading file from: https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE4888&format=file\n",
+      "Untarring and unzipping file at: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE4888.tar\n",
       "Downloading file from: https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE6364&format=file\n",
-      "Untarring and unzipping file at: /media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE6364.tar\n",
+      "Untarring and unzipping file at: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE6364.tar\n",
       "Downloading file from: https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE51981&format=file\n",
-      "Untarring and unzipping file at: /media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE51981.tar\n",
+      "Untarring and unzipping file at: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE51981.tar\n",
       "Downloading file from: https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE29981&format=file\n",
-      "Untarring and unzipping file at: /media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE29981.tar\n",
+      "Untarring and unzipping file at: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE29981.tar\n",
       "All files downloaded and extracted successfully.\n"
      ]
     }
@@ -134,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +136,7 @@
      "output_type": "stream",
      "text": [
       "Executing command:\n",
-      "Rscript /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/rma_counts.r /media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files /media/data/lab/gene/endometriosis-microarray-analysis/data/all\n"
+      "Rscript /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/rma_counts.r /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files /media/data/lab/gene/characterizing-endometriosis-transcriptome/data/all\n"
      ]
     },
     {
@@ -159,12 +153,12 @@
       "\n",
       "The following objects are masked from ‘package:base’:\n",
       "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
-      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
-      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
-      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
-      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
-      "    union, unique, unsplit, which.max, which.min\n",
+      "    anyDuplicated, aperm, append, as.data.frame, basename, cbind,\n",
+      "    colnames, dirname, do.call, duplicated, eval, evalq, Filter, Find,\n",
+      "    get, grep, grepl, intersect, is.unsorted, lapply, Map, mapply,\n",
+      "    match, mget, order, paste, pmax, pmax.int, pmin, pmin.int,\n",
+      "    Position, rank, rbind, Reduce, rownames, sapply, setdiff, sort,\n",
+      "    table, tapply, union, unique, unsplit, which.max, which.min\n",
       "\n",
       "Loading required package: Biobase\n",
       "Welcome to Bioconductor\n",
@@ -180,10 +174,10 @@
      "output_type": "stream",
      "text": [
       "Preprocessing data in the following directories:\n",
-      "/media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE29981\n",
-      "/media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE4888\n",
-      "/media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE51981\n",
-      "/media/data/lab/gene/endometriosis-microarray-analysis/data/cel_files/GSE6364\n",
+      "/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE29981\n",
+      "/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE4888\n",
+      "/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE51981\n",
+      "/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/cel_files/GSE6364\n",
       "------------------------------------------------\n",
       "\n"
      ]
@@ -226,10 +220,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probe map found: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n",
-      "Probe map found: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n",
-      "Probe map found: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n",
-      "Probe map found: /media/data/lab/gene/endometriosis-microarray-analysis/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n"
+      "Probe map found: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n",
+      "Probe map found: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n",
+      "Probe map found: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n",
+      "Probe map found: /media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/metadata/probe_maps/hsapiens_affy_hg_u133_plus_2.tsv\n"
      ]
     }
    ],
@@ -251,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,20 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8194"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Copy coldata into data directory\n",
     "original_unified_coldata_path = METADATA_DIR / \"coldata.tsv\"\n",
@@ -302,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +327,7 @@
       "\n",
       "    collapse\n",
       "\n",
-      "This is mgcv 1.8-42. For overview type 'help(\"mgcv-package\")'.\n",
+      "This is mgcv 1.9-0. For overview type 'help(\"mgcv-package\")'.\n",
       "Loading required package: genefilter\n",
       "\n",
       "Attaching package: ‘genefilter’\n",
@@ -383,10 +366,10 @@
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['Rscript', '/media/data/lab/gene/endometriosis-microarray-analysis/data_prep/batch_correction.r', '/media/data/lab/gene/endometriosis-microarray-analysis/data/all/all_phases_all_genes_counts.tsv', '/media/data/lab/gene/endometriosis-microarray-analysis/data/all/all_phases_coldata.tsv'], returncode=0)"
+       "CompletedProcess(args=['Rscript', '/media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/batch_correction.r', '/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/all/all_phases_all_genes_counts.tsv', '/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/all/all_phases_coldata.tsv'], returncode=0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
